fix: pagination info and control increase of space-between when width is too large

--- a/packages/components/src/DataTable/Footer.css
+++ b/packages/components/src/DataTable/Footer.css
@@ -10,7 +10,7 @@
 }
 
 .paginationInfo {
-  flex: 2;
+  flex: 9999;
   white-space: nowrap;
 }
 
